@@ -2,11 +2,12 @@ package com.ehhthan.mmobuffs.api;
 
 import com.ehhthan.mmobuffs.MMOBuffs;
 import com.ehhthan.mmobuffs.api.effect.ActiveStatusEffect;
+import com.ehhthan.mmobuffs.api.effect.stack.StackType;
 import com.ehhthan.mmobuffs.api.modifier.Modifier;
 import com.ehhthan.mmobuffs.api.tag.CustomTagTypes;
 import net.kyori.adventure.bossbar.BossBar;
 import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.TextComponent;
+import net.kyori.adventure.text.JoinConfiguration;
 import org.bukkit.Bukkit;
 import org.bukkit.NamespacedKey;
 import org.bukkit.configuration.ConfigurationSection;
@@ -22,7 +23,8 @@ import java.util.stream.Collectors;
 
 import static com.ehhthan.mmobuffs.util.KeyUtil.key;
 
-public class EffectHolder implements PersistentDataHolder {
+public final class EffectHolder implements PersistentDataHolder {
+
     private static final NamespacedKey EFFECTS = key("effects");
     private static final Map<Player, EffectHolder> DATA = new ConcurrentHashMap<>();
     private static final BossBar EMPTY_BAR = BossBar.bossBar(Component.empty(), 1, BossBar.Color.WHITE, BossBar.Overlay.PROGRESS);
@@ -31,93 +33,181 @@ public class EffectHolder implements PersistentDataHolder {
     private final BossBar bossBar;
     private final Component separator;
     private final Map<NamespacedKey, ActiveStatusEffect> effects = new HashMap<>();
+    private final List<ActiveStatusEffect> displayableEffects = new ArrayList<>();
+
+    private final boolean bossbarEnabled;
+    private final boolean displayWhenEmpty;
+    private final boolean durationAscending;
+    private final int bossbarUpdateTicks;
+
+    private boolean displayCacheInvalid = true;
 
     public EffectHolder(Player player) {
         this.player = player;
+
         FileConfiguration config = MMOBuffs.getInst().getConfig();
         this.separator = Component.text(config.getString("bossbar-display.effect-separator", " "));
 
         ConfigurationSection section = config.getConfigurationSection("bossbar-display");
-        this.bossBar = (section != null && config.getBoolean("bossbar-display.enabled", true))
-                ? BossBar.bossBar(Component.empty(), 1,
-                Objects.requireNonNull(BossBar.Color.NAMES.value(section.getString("color", "white"))),
-                Objects.requireNonNull(BossBar.Overlay.NAMES.value(section.getString("overlay", "progress"))))
-                : EMPTY_BAR;
+        this.bossbarEnabled = config.getBoolean("bossbar-display.enabled", true);
+        this.displayWhenEmpty = config.getBoolean("bossbar-display.display-when-empty", false);
+        this.durationAscending = config.getBoolean("sorting.duration-ascending", true);
+        this.bossbarUpdateTicks = config.getInt("bossbar-display.update-ticks", 20);
 
-        if (config.getBoolean("bossbar-display.display-when-empty", false)) player.showBossBar(bossBar);
+        if (section != null && bossbarEnabled) {
+            BossBar.Color color = Objects.requireNonNull(BossBar.Color.NAMES.value(section.getString("color", "white")));
+            BossBar.Overlay overlay = Objects.requireNonNull(BossBar.Overlay.NAMES.value(section.getString("overlay", "progress")));
+            this.bossBar = BossBar.bossBar(Component.empty(), 1, color, overlay);
+        } else {
+            this.bossBar = EMPTY_BAR;
+        }
+
+        if (bossbarEnabled && displayWhenEmpty) {
+            player.showBossBar(bossBar);
+        }
+
         loadSavedEffects();
         runSchedulers();
     }
 
     private void runSchedulers() {
         Bukkit.getScheduler().runTaskTimer(MMOBuffs.getInst(), () -> {
+            if (!player.isOnline()) {
+                return;
+            }
+
             Iterator<ActiveStatusEffect> it = effects.values().iterator();
+            boolean changed = false;
+
             while (it.hasNext()) {
                 ActiveStatusEffect effect = it.next();
-                if (effect.tick()) updateEffect(effect.getStatusEffect().getKey());
-                if (!effect.isActive()) {
+                boolean active = effect.tick();
+
+                if (!active) {
+                    StackType stackType = effect.getStatusEffect().getStackType();
+
+                    if ((stackType == StackType.CASCADING || stackType == StackType.TIMESTACK) && effect.getStacks() > 1) {
+                        effect.setStacks(effect.getStacks() - 1);
+                        effect.setDuration(effect.getStatusEffect().getDuration());
+                        MMOBuffs.getInst().getStatManager().add(this, effect);
+                        changed = true;
+                        displayCacheInvalid = true;
+                        continue;
+                    }
+
                     MMOBuffs.getInst().getStatManager().remove(this, effect);
                     it.remove();
+                    changed = true;
+                    displayCacheInvalid = true;
                 }
             }
-            save();
+
+            if (changed) {
+                save();
+            }
         }, 1, 20);
 
         Bukkit.getScheduler().runTaskTimer(MMOBuffs.getInst(), () -> {
-            if (!MMOBuffs.getInst().getConfig().getBoolean("bossbar-display.enabled", true)) return;
-
-            List<ActiveStatusEffect> displayable = effects.values().stream()
-                    .filter(e -> e.getStatusEffect().hasDisplay())
-                    .sorted(Comparator.comparingInt(ActiveStatusEffect::getDuration))
-                    .collect(Collectors.toList());
-
-            if (!MMOBuffs.getInst().getConfig().getBoolean("sorting.duration-ascending", true)) Collections.reverse(displayable);
-
-            TextComponent.Builder builder = Component.text();
-            for (int i = 0; i < displayable.size(); i++) {
-                if (i > 0) builder.append(separator);
-                ActiveStatusEffect effect = displayable.get(i);
-                builder.append(effect.getStatusEffect().getDisplay()
-                        .map(display -> display.build(player, effect))
-                        .orElse(Component.empty()));
+            if (!player.isOnline() || !bossbarEnabled) {
+                return;
             }
 
-            if (!displayable.isEmpty() || MMOBuffs.getInst().getConfig().getBoolean("bossbar-display.display-when-empty", false)) {
-                bossBar.name(builder.build());
+            if (effects.isEmpty()) {
+                if (displayWhenEmpty) {
+                    bossBar.name(Component.empty());
+                    player.showBossBar(bossBar);
+                } else {
+                    player.hideBossBar(bossBar);
+                }
+                return;
+            }
+
+            if (displayCacheInvalid) {
+                displayableEffects.clear();
+                for (ActiveStatusEffect effect : effects.values()) {
+                    if (effect.getStatusEffect().hasDisplay()) {
+                        displayableEffects.add(effect);
+                    }
+                }
+
+                displayableEffects.sort(Comparator.comparingInt(ActiveStatusEffect::getDuration));
+                if (!durationAscending) {
+                    Collections.reverse(displayableEffects);
+                }
+
+                displayCacheInvalid = false;
+            }
+
+            List<Component> components = new ArrayList<>();
+            for (ActiveStatusEffect effect : displayableEffects) {
+                effect.getStatusEffect().getDisplay()
+                        .map(display -> display.build(player, effect))
+                        .ifPresent(components::add);
+            }
+
+            if (!components.isEmpty()) {
+                bossBar.name(Component.join(JoinConfiguration.separator(separator), components));
+                player.showBossBar(bossBar);
+            } else if (displayWhenEmpty) {
+                bossBar.name(Component.empty());
                 player.showBossBar(bossBar);
             } else {
                 player.hideBossBar(bossBar);
             }
-        }, 2, MMOBuffs.getInst().getConfig().getInt("bossbar-display.update-ticks", 20));
+        }, 2, Math.max(1, bossbarUpdateTicks));
     }
 
     private void loadSavedEffects() {
-        if (!getPersistentDataContainer().has(EFFECTS, CustomTagTypes.ACTIVE_EFFECTS)) return;
-        Optional.ofNullable(getPersistentDataContainer().get(EFFECTS, CustomTagTypes.ACTIVE_EFFECTS))
-                .ifPresent(array -> Arrays.stream(array)
-                        .filter(Objects::nonNull)
-                        .forEach(e -> addEffect(e, Modifier.SET, Modifier.SET)));
+        PersistentDataContainer container = getPersistentDataContainer();
+        if (!container.has(EFFECTS, CustomTagTypes.ACTIVE_EFFECTS)) {
+            return;
+        }
+        ActiveStatusEffect[] stored = container.get(EFFECTS, CustomTagTypes.ACTIVE_EFFECTS);
+        if (stored == null || stored.length == 0) {
+            return;
+        }
+        for (ActiveStatusEffect effect : stored) {
+            if (effect != null) {
+                addEffect(effect, Modifier.SET, Modifier.SET);
+            }
+        }
     }
 
     public void addEffect(ActiveStatusEffect effect, Modifier durationMod, Modifier stackMod) {
         NamespacedKey key = effect.getStatusEffect().getKey();
         effects.merge(key, effect, (oldEff, newEff) -> oldEff.merge(newEff, durationMod, stackMod));
-        MMOBuffs.getInst().getStatManager().add(this, effects.get(key));
+        ActiveStatusEffect current = effects.get(key);
+        MMOBuffs.getInst().getStatManager().add(this, current);
+        displayCacheInvalid = true;
+        save();
     }
 
     public void updateEffect(NamespacedKey key) {
         ActiveStatusEffect effect = effects.get(key);
-        if (effect != null) MMOBuffs.getInst().getStatManager().add(this, effect);
+        if (effect != null) {
+            MMOBuffs.getInst().getStatManager().add(this, effect);
+            displayCacheInvalid = true;
+            save();
+        }
     }
 
     public void removeEffect(NamespacedKey key) {
-        if (!hasEffect(key)) return;
-        MMOBuffs.getInst().getStatManager().remove(this, effects.get(key));
-        effects.remove(key);
+        if (!hasEffect(key)) {
+            return;
+        }
+        ActiveStatusEffect effect = effects.remove(key);
+        if (effect != null) {
+            MMOBuffs.getInst().getStatManager().remove(this, effect);
+            displayCacheInvalid = true;
+            save();
+        }
     }
 
     public void removeEffects(boolean includePermanent) {
-        getEffects(includePermanent).forEach(e -> removeEffect(e.getStatusEffect().getKey()));
+        Collection<ActiveStatusEffect> snapshot = getEffects(includePermanent);
+        for (ActiveStatusEffect effect : snapshot) {
+            removeEffect(effect.getStatusEffect().getKey());
+        }
     }
 
     public boolean hasEffect(NamespacedKey key) {
@@ -129,7 +219,12 @@ public class EffectHolder implements PersistentDataHolder {
     }
 
     public Collection<ActiveStatusEffect> getEffects(boolean includePermanent) {
-        return includePermanent ? new ArrayList<>(effects.values()) : effects.values().stream().filter(e -> !e.isPermanent()).toList();
+        if (includePermanent) {
+            return new ArrayList<>(effects.values());
+        }
+        return effects.values().stream()
+                .filter(e -> !e.isPermanent())
+                .collect(Collectors.toList());
     }
 
     public Player getPlayer() {
@@ -137,7 +232,13 @@ public class EffectHolder implements PersistentDataHolder {
     }
 
     private void save() {
-        getPersistentDataContainer().set(EFFECTS, CustomTagTypes.ACTIVE_EFFECTS, effects.values().toArray(new ActiveStatusEffect[0]));
+        PersistentDataContainer container = getPersistentDataContainer();
+        if (effects.isEmpty()) {
+            container.remove(EFFECTS);
+        } else {
+            ActiveStatusEffect[] array = effects.values().toArray(new ActiveStatusEffect[0]);
+            container.set(EFFECTS, CustomTagTypes.ACTIVE_EFFECTS, array);
+        }
     }
 
     @Override
@@ -153,15 +254,20 @@ public class EffectHolder implements PersistentDataHolder {
         return DATA.get(player);
     }
 
-    public static class PlayerListener implements org.bukkit.event.Listener {
+    public static final class PlayerListener implements org.bukkit.event.Listener {
         @org.bukkit.event.EventHandler
-        public void onJoin(org.bukkit.event.player.PlayerJoinEvent e) {
-            DATA.put(e.getPlayer(), new EffectHolder(e.getPlayer()));
+        public void onJoin(org.bukkit.event.player.PlayerJoinEvent event) {
+            Player player = event.getPlayer();
+            DATA.put(player, new EffectHolder(player));
         }
 
         @org.bukkit.event.EventHandler
-        public void onQuit(org.bukkit.event.player.PlayerQuitEvent e) {
-            DATA.remove(e.getPlayer());
+        public void onQuit(org.bukkit.event.player.PlayerQuitEvent event) {
+            Player player = event.getPlayer();
+            EffectHolder holder = DATA.remove(player);
+            if (holder != null) {
+                holder.save();
+            }
         }
     }
 }
